@@ -1,4 +1,10 @@
 
+Изменения в nginx 1.13.12                                         10.04.2018
+
+    *) Исправление: при возврате большого ответа соединения с gRPC-бэкендами
+       могли неожиданно закрываться.
+
+
 Изменения в nginx 1.13.11                                         03.04.2018
 
     *) Добавление: параметр proxy_protocol директивы listen теперь
