@@ -7,6 +7,13 @@
 
 <news name="nginx news" link="/" lang="en">
 
+<event date="2018-04-10">
+<para>
+<link doc="en/download.xml">nginx-1.13.12</link>
+mainline version has been released.
+</para>
+</event>
+
 <event date="2018-04-03">
 <para>
 <link doc="en/docs/njs_about.xml">njs-0.2.0</link>
