@@ -9,6 +9,7 @@
 
 <download tag="mainline" changes="">
 
+<item ver="1.13.12" />
 <item ver="1.13.11" />
 <item ver="1.13.10" />
 <item ver="1.13.9" />
